Improved Spritzer class to work better with the Spritz-Reading-API.