@@ -15,7 +15,6 @@ import org.speedreading.api.WordORP;
 
 import java.lang.ref.WeakReference;
 import java.util.ArrayDeque;
-import java.util.ArrayList;
 import java.util.Arrays;
 
 
@@ -32,11 +31,12 @@ public class Spritzer {
 
     protected static final int CHARS_LEFT_OF_PIVOT = 3;
     protected static final ForegroundColorSpan spanRed = new ForegroundColorSpan(Color.RED);
-    protected ArrayList<WordORP> mWordArrayList;
-    protected ArrayDeque<String> mWordQueue;        // The queue of words from mWordArrayList yet to be displayed
+    protected ArrayDeque<WordORP> mWordQueue;        // The queue of words from mWordArrayList yet to be displayed
     protected SpeedReadingAPI speedReadingAPI;
     protected TextView mTarget;
     protected int mWPM;
+    protected int mWordCount;
+    protected String mInput;
     protected Handler mSpritzHandler;
     protected Object mPlayingSync = new Object();
     protected boolean mPlaying;
@@ -68,25 +68,20 @@ public class Spritzer {
      * @param input
      */
     public void setText(String input) {
-        createWordArrayFromString(input);
-        setMaxProgress();
+        mInput = input;
         refillWordQueue();
+        setMaxProgress();
     }
 
     private void setMaxProgress() {
-        if (mWordArrayList != null && mProgressBar != null) {
-            mProgressBar.setMax(mWordArrayList.size());
+        if (mProgressBar != null) {
+            mProgressBar.setMax(mWordCount);
         }
-    }
-
-    private void createWordArrayFromString(String input) {
-        mWordArrayList = speedReadingAPI.convertToSpeedReadingText(input);
     }
 
     protected void init() {
 
         mDelayStrategy = new DefaultDelayStrategy();
-        mWordQueue = new ArrayDeque<String>();
         mWPM = 500;
         mPlaying = false;
         mPlayingRequested = false;
@@ -135,7 +130,7 @@ public class Spritzer {
      * fed to {@link #setText(String)}
      */
     public void start() {
-        if (mPlaying || mWordArrayList == null) {
+        if (mPlaying) {
             return;
         }
         if (mWordQueue.isEmpty()) {
@@ -153,9 +148,7 @@ public class Spritzer {
     private void refillWordQueue() {
         updateProgress();
         mCurWordIdx = 0;
-        mWordQueue.clear();
-        String[] temp = speedReadingAPI.convertToStringArray(mWordArrayList);
-        mWordQueue.addAll(Arrays.asList(temp));
+        mWordQueue = speedReadingAPI.convertToSpeedReadingText(mInput);
     }
 
     private void updateProgress() {
@@ -179,14 +172,15 @@ public class Spritzer {
      */
     protected void processNextWord() throws InterruptedException {
         if (!mWordQueue.isEmpty()) {
-            String word = mWordQueue.remove();
+            WordORP wop = mWordQueue.remove();
             mCurWordIdx += 1;
-            // Split long words, at hyphen if present
-            //word = splitLongWord(word);
 
-            mSpritzHandler.sendMessage(mSpritzHandler.obtainMessage(MSG_PRINT_WORD, word));
+            mSpritzHandler.sendMessage(mSpritzHandler.obtainMessage(MSG_PRINT_WORD, wop.getWord()));
 
-            final int delayMultiplier = mDelayStrategy.delayMultiplier(word);
+            // Removes spaces at the beginning of a word
+            wop.setWord(wop.getWord().substring(3-wop.getOrp()));
+
+            final int delayMultiplier = mDelayStrategy.delayMultiplier(wop.getWord());
             //Do not allow multiplier that is less than 1
             final int wordDelay = getInterWordDelay() * (mDelayStrategy != null ? delayMultiplier < 1 ? 1 : delayMultiplier : 1);
             Thread.sleep(wordDelay);
@@ -196,8 +190,8 @@ public class Spritzer {
     }
 
     private void printLastWord() {
-        if (mWordArrayList != null) {
-            printWord(mWordArrayList.get(mWordArrayList.size() - 1).getWord());
+        if (mWordQueue != null) {
+            printWord(mWordQueue.getLast().getWord());
         }
     }
 
@@ -209,16 +203,6 @@ public class Spritzer {
      * @param word
      */
     private void printWord(String word) {
-
-        WordORP wop = null;
-        for (WordORP temp : mWordArrayList) {
-            if (temp.getWord().equals(word))
-                wop = temp;
-        }
-        int i = 1;
-        for (; i < 4 - wop.getOrp(); i++) {
-            word = " " + word;
-        }
 
         Spannable spanRange = new SpannableString(word);
         spanRange.setSpan(spanRed, 3, 4, 0);
@@ -281,14 +265,6 @@ public class Spritzer {
                 }).start();
             }
         }
-    }
-
-    public String[] getWordArray() {
-        return speedReadingAPI.convertToStringArray(mWordArrayList);
-    }
-
-    public ArrayDeque<String> getWordQueue() {
-        return mWordQueue;
     }
 
     public void attachProgressBar(ProgressBar bar) {
